# Corona-Virus-Meta-Analysis-2020

./: Age_distribution.R  Corona_Meta_Analyse.R  Corona_review_comorbidities_all_patients_final.csv  Corona_review_demographics_all_patients_final.csv  Corona_review_demographics_of_severity_mortality_cohort.csv  Corona_review_imaging_all_patients_final.csv  Corona_review_labor_all_patients_final.csv  Corona_review_outcomes_all_patients_final.csv  Corona_review_symptoms_all_patients_final.csv  Corona_review_treatment_all_patients_final.csv  LICENSE  Meta_analysis_age.csv  Meta_analysis_labs_severe_non_severe.csv  Meta_analysis_labs_survivors_non_survivors.csv  Meta_analysis_severe_non_severe.csv  Meta_analysis_severe_non_severe_without_cardiac.csv  Meta_analysis_survivor_death_without_cardiac.csv  PRISMA_flowchart.R  Population_pyramide_figure.R  README.md  Visualization_of__data.R  World_map_of_studies.R  age_distribution_code.R  blood_values_adult.R  blood_values_children.R  blood_values_pregnant.R  corona_sex_distr.csv  meta_analysis_final.R  meta_analysis_prevalence.R  pyproject.toml
covid_19_review/: format_data.py  lab_values.sh  simulate_skew_normal_distribution.py
tests/: test_covid_19_review.py
