[tool.poetry]
name = "COVID-19_Review"
version = "0.1.0"
description = ""
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "^1.0.3"
xlrd = "^1.2.0"
numpy = "^1.18.2"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
